--- a/app/components/main.html
+++ b/app/components/main.html
@@ -1,10 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Main</title>
-</head>
-<body>
-<p>LOL</p>
-</body>
-</html>
+<div class="container-fluid">
+    <div class="row">
+        <div class="content col-md-10 offset-md-1">
+            <div class="row">
+                <div class="custom-carousel col-md-8 offset-md-2">
+                    <div id="carousel-example-generic" class="carousel slide row" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img src="assets/img/wanga_r.png" alt="Wanga-R">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/wanga_i.png" alt="Wanga-I">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/wanga_0.png" alt="Wanga-0">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/wanga_n.png" alt="Wanga-N">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/img/zet.png" alt="Zet">
+                            </div>
+                        </div>
+                        <a class="left carousel-control" href="#carousel-example-generic" role="button"
+                           data-slide="prev">
+                            <span class="icon-prev" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" role="button"
+                           data-slide="next">
+                            <span class="icon-next" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <article>
+                <h4>Відновлення пропусків у масивах даних</h4>
+                <p>
+                    Завдання кластеризації даних є важливим елементом загальної проблеми Data Mining, а для її вирішення
+                    сьогодні існує безліч підходів і алгоритмів від суто інтуїтивних і евристичних до строго
+                    математичних. Разом з тим, у багатьох задачах Data Mining, включаючи кластеризацію, вихідні таблиці
+                    даних «об’єкт-властивість» можуть містити порожні клітини (пропуски), інформація в яких з тих чи
+                    інших причин відсутня. Задачі відновлення таких пропущених спостережень приділялося достатньо уваги,
+                    при тому більш ефективними в даній ситуації опинилися підходи, що базуються на математичному
+                    апараті м’яких обчислень (обчислювального інтелекту), і, перш за все, штучних нейронних мережах.
+                    Разом з тим, відомі підходи до відновлення пропусків і традиційні алгоритми кластеризації
+                    працездатні лише у випадках, коли вихідна таблиця задана апріорно і число її рядків або стовпців не
+                    змінюється в процесі обробки. У той же час існує досить широкий клас задач, коли дані надходять на
+                    обробку послідовно в on-line режимі, при цьому заздалегідь невідомо, який з оброблюваних
+                    векторів-образів може містити пропуски. При цьому процеси відновлення даних та їх кластеризація
+                    повинні протікати паралельно та в реальному часі. Традиційний підхід до вирішення таких завдань
+                    передбачає, що кожне спостереження може відноситися тільки до одного кластеру, хоча більш природною
+                    видається ситуація, коли оброблюваний вектор ознак з різними рівнями належності може відноситись
+                    одразу до декількох класів.
+                </p>
+            </article>
+        </div>
+    </div>
+</div>
