--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -39,6 +39,14 @@ body {
     background: #FFFFFF;
 }
 
+.tab-pane {
+    margin-top: 10px;
+}
+
+.nav-tabs .nav-item a {
+    color: grey;
+}
+
 article {
     text-align: justify;
     margin-top: 10px;
