--- a/app/components/wanga.html
+++ b/app/components/wanga.html
@@ -251,8 +251,7 @@
                         ранг,
                         який
                         набрав найбільшу кількість голосів. Ентропія отриманого розподілу голосів Н дозволить нам
-                        оцінити
-                        ступінь
+                        оцінити ступінь
                         довіри P до цього результату: P = 1: (H + 1).
                     </p>
                 </div>
