--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -24,7 +24,7 @@
 
 body {
     background: url("../img/bg.jpg") repeat;
-    font-family: "Helvetica Neue", serif;
+    font-family: "Times New Roman", serif;
 }
 
 .custom-carousel {
