--- a/app/components/main.html
+++ b/app/components/main.html
@@ -20,12 +20,12 @@
                             <img src="assets/img/zet.png" alt="Zet">
                         </div>
                     </div>
-                    <a class="left carousel-control" href="#carousel-example-generic" role="button"
+                    <a class="left carousel-control" href="#previous" role="button"
                        data-slide="prev">
                         <span class="icon-prev" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" role="button"
+                    <a class="right carousel-control" href="#next" role="button"
                        data-slide="next">
                         <span class="icon-next" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
