--- a/app/components/wanga.html
+++ b/app/components/wanga.html
@@ -265,14 +265,17 @@
         var tabContent = $('.tab-content');
 
         var tabChange = function () {
+            var tab = tabsWrapper.find('> li:nth-child(' + position + ')');
+            var link = tab.find('a');
             tabContent.css({ opacity: 0 });
-            var tabs = tabsWrapper.find('> li:nth-child(' + position + ')');
-            tabs.find('a').tab('show');
+            link.css({ opacity: 0 });
+            link.tab('show');
             if (position < tabsWrapper.find('> li').length) {
                 position++;
             } else {
                 position = 1;
             }
+            link.animate({ opacity: 1 }, 500);
             tabContent.animate({ opacity: 1 }, 500);
         };
 
@@ -281,10 +284,13 @@
 
         $(function () {
             $('.nav-tabs a').click(function (e) {
+                var link = $(this);
+                link.css({ opacity: 0 });
                 tabContent.css({ opacity: 0 });
                 e.preventDefault();
                 clearInterval(tabCycle);
-                $(this).tab('show');
+                link.tab('show');
+                link.animate({ opacity: 1 }, 500);
                 tabContent.animate({ opacity: 1 }, 500);
             });
         });
