--- a/app/components/main.html
+++ b/app/components/main.html
@@ -2,7 +2,7 @@
     <div class="content col-md-10 offset-md-1">
         <div class="row">
             <div class="custom-carousel col-md-8 offset-md-2">
-                <div id="carousel-example-generic" class="carousel slide row" data-ride="carousel">
+                <div id="carousel" class="carousel slide row" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img src="assets/img/wanga_r.png" alt="Wanga-R">
@@ -20,12 +20,12 @@
                             <img src="assets/img/zet.png" alt="Zet">
                         </div>
                     </div>
-                    <a class="left carousel-control" href="#previous" role="button"
+                    <a class="left carousel-control" href="#carousel" role="button"
                        data-slide="prev">
                         <span class="icon-prev" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#next" role="button"
+                    <a class="right carousel-control" href="#carousel" role="button"
                        data-slide="next">
                         <span class="icon-next" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
