--- a/app/components/main.html
+++ b/app/components/main.html
@@ -1,4 +1,5 @@
 <div class="row">
+    <header></header>
     <div class="content col-md-10 offset-md-1">
         <div class="row">
             <div class="custom-carousel col-md-8 offset-md-2">
