--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -22,16 +22,25 @@
     padding-right: 0.3em;
 }
 
+@media (max-width: 768px) {
+    header {
+        background: url("../img/left_background.jpg") center fixed no-repeat;
+        background-size: cover;
+        height: 400px;
+    }
+}
+@media (min-width: 768px) {
+    header {
+        background: url("../img/right_background.png") right fixed no-repeat,
+        url("../img/left_background.jpg") left fixed no-repeat;
+        background-size: cover, cover;
+        height: 400px;
+    }
+}
+
 body {
     background: url("../img/bg.jpg") repeat;
     font-family: "Helvetica Neue", serif;
-}
-
-header {
-    background: url("../img/right_background.png") right fixed no-repeat,
-    url("../img/left_background.jpg") left fixed no-repeat;
-    background-size: cover, cover;
-    height: 400px;
 }
 
 .custom-carousel {
