--- a/app/components/main.html
+++ b/app/components/main.html
@@ -1,5 +1,9 @@
 <div class="row">
-    <header></header>
+    <header>
+        <img id="books" src="assets/img/books.png">
+    </header>
+</div>
+<div class="row full-content">
     <div class="content col-md-10 offset-md-1">
         <div class="row">
             <div class="custom-carousel col-md-8 offset-md-2">
@@ -57,4 +61,6 @@
             </p>
         </article>
     </div>
+
+    <script src="assets/js/books.js"></script>
 </div>
