--- a/app/components/wanga.html
+++ b/app/components/wanga.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row full-content">
     <div class="content col-md-10 offset-md-1">
         <article>
             <h4>Алгоритми сімейства WANGA</h4>
