--- a/app/components/main.html
+++ b/app/components/main.html
@@ -1,6 +1,9 @@
 <div class="row">
     <header>
         <img id="books" src="assets/img/books.png">
+        <div>
+            <h3>Відновлення пропусків <br> у масивах даних</h3>
+        </div>
     </header>
 </div>
 <div class="row full-content">
