--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
     body header {
-        background: url("../img/left_background.png") center fixed no-repeat;
+        background: url("../img/left_background.png") center no-repeat;
         background-size: cover;
         height: 400px;
     }
@@ -12,8 +12,8 @@
 
 @media (min-width: 768px) {
     body header {
-        background: url("../img/right_background.png") right fixed no-repeat,
-        url("../img/left_background.png") left fixed no-repeat;
+        background: url("../img/right_background.png") right no-repeat,
+        url("../img/left_background.png") left no-repeat;
         background-size: cover, cover;
         height: 400px;
     }
@@ -32,6 +32,14 @@
 body {
     font-family: "Helvetica Neue", serif;
     overflow-x: hidden;
+}
+
+h3 {
+    padding-left: 20px;
+    padding-top: 180px;
+    font-style: italic;
+    font-weight: bold;
+    color: green;
 }
 
 .custom-carousel {
