--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -40,6 +40,7 @@ h2 {
     font-style: italic;
     font-weight: bold;
     color: green;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
 .custom-carousel {
