--- a/app/components/main.html
+++ b/app/components/main.html
@@ -4,7 +4,7 @@
         <h2>Відновлення пропусків <br> у масивах даних</h2>
     </header>
 </div>
-<div class="carousel-wrapper row">
+<div class="green-content row">
     <div class="col-md-3">
         <h3 class="carousel-text">Результат роботи алгоритму</h3>
     </div>
@@ -41,4 +41,49 @@
     </div>
     <script src="assets/js/books.js"></script>
 </div>
+<div class="row">
+    <ul class="nav nav-tabs" id="newTab" role="tablist">
+        <li class="nav-item active">
+            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
+               aria-controls="wanga-q">Wanga-R</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-s" role="tab"
+               aria-controls="wanga-s">Wanga-I</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-c" role="tab"
+               aria-controls="wanga-c">Wanga-N</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-z" role="tab"
+               aria-controls="wanga-z">Wanga-0</a>
+        </li>
+    </ul>
 
+    <div class="tab-content">
+        <div class="tab-pane" id="wanga-q" role="tabpanel">
+            <h5>WANGA – R</h5>
+        </div>
+        <div class="tab-pane" id="wanga-s" role="tabpanel">
+            <h5>WANGA – I</h5>
+        </div>
+        <div class="tab-pane" id="wanga-z" role="tabpanel">
+            <h5>WANGA – N</h5>
+        </div>
+        <div class="tab-pane" id="wanga-c" role="tabpanel">
+            <h5>WANGA – O</h5>
+        </div>
+    </div>
+</div>
+<div class="green-content row">
+    <div class="links-wrapper mx-auto">
+        <h4>Алгоритми</h4>
+        <a href="#wanga">Wanga</a>
+        <a href="#zet">Zet</a>
+    </div>
+</div>
+<div class="row">
+    <p class="float-sm-left">Copyright © 2016</p>
+    <p class="float-sm-right">Created by Mary Gerina</p>
+</div>
