--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -66,8 +66,38 @@ article {
     margin-top: 10px;
 }
 
-.carousel-wrapper {
+.green-content {
     background: #b2bb47;
+}
+
+.full-content {
+    background: url("../img/bg.jpg") repeat;
+}
+
+.content {
+    background: #FFFFFF;
+}
+
+.links-wrapper {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 170px;
+}
+
+.links-wrapper a:link, .links-wrapper a:visited {
+    background-color: #b2bb47;
+    color: white;
+    border: 2px solid white;
+    border-radius: 25px;
+    padding: 10px 15px;
+    width:80px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.links-wrapper a:hover, .links-wrapper a:active {
+    background-color: green;
 }
 
 .custom-carousel {
@@ -77,14 +107,6 @@ article {
 
 .carousel img {
     width: 100%;
-}
-
-.content {
-    background: #FFFFFF;
-}
-
-.full-content {
-    background: url("../img/bg.jpg") repeat;
 }
 
 .tab-pane {
