--- a/app/components/main.html
+++ b/app/components/main.html
@@ -1,89 +1,105 @@
-<div class="row">
-    <header>
-        <img id="books" src="assets/img/books.png">
-        <h2>Відновлення пропусків <br> у масивах даних</h2>
-    </header>
-</div>
-<div class="green-content row">
-    <div class="col-md-3">
-        <h3 class="carousel-text">Результат роботи алгоритму</h3>
+<div>
+    <div class="row">
+        <header>
+            <img id="books" src="assets/img/books.png">
+            <h2>Відновлення пропусків <br> у масивах даних</h2>
+        </header>
     </div>
-    <div class="custom-carousel offset-md-1 col-md-7">
-        <div id="carousel" class="carousel slide row" data-ride="carousel">
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <img src="assets/img/wanga_r.png" alt="Wanga-R">
+    <div class="green-content row">
+        <div class="col-md-3">
+            <h3 class="carousel-text">Результат роботи алгоритму</h3>
+        </div>
+        <div class="custom-carousel offset-md-1 col-md-7">
+            <div id="carousel" class="carousel slide row" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img src="assets/img/wanga_r.png" alt="Wanga-R">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/wanga_i.png" alt="Wanga-I">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/wanga_0.png" alt="Wanga-0">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/wanga_n.png" alt="Wanga-N">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/zet.png" alt="Zet">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="assets/img/wanga_i.png" alt="Wanga-I">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/wanga_0.png" alt="Wanga-0">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/wanga_n.png" alt="Wanga-N">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img/zet.png" alt="Zet">
-                </div>
+                <a class="left carousel-control" href="#carousel" role="button"
+                   data-slide="prev">
+                    <span class="icon-prev" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel" role="button"
+                   data-slide="next">
+                    <span class="icon-next" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-            <a class="left carousel-control" href="#carousel" role="button"
-               data-slide="prev">
-                <span class="icon-prev" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel" role="button"
-               data-slide="next">
-                <span class="icon-next" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
+        <script src="assets/js/books.js"></script>
     </div>
-    <script src="assets/js/books.js"></script>
-</div>
-<div class="row">
-    <ul class="nav nav-tabs" id="newTab" role="tablist">
-        <li class="nav-item active">
-            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
-               aria-controls="wanga-q">Wanga-R</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-s" role="tab"
-               aria-controls="wanga-s">Wanga-I</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-c" role="tab"
-               aria-controls="wanga-c">Wanga-N</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-z" role="tab"
-               aria-controls="wanga-z">Wanga-0</a>
-        </li>
-    </ul>
+    <div class="row">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item active">
+                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
+                   aria-controls="wanga-q">
+                    <img src="assets/img/bg.jpg"/>
+                    Wanga-R
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-s" role="tab"
+                   aria-controls="wanga-s">
+                    <img src="assets/img/bg.jpg"/>
+                    Wanga-I
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-c" role="tab"
+                   aria-controls="wanga-c">
+                    <img src="assets/img/bg.jpg"/>
+                    Wanga-N
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-z" role="tab"
+                   aria-controls="wanga-z">
+                    <img src="assets/img/bg.jpg"/>
+                    Wanga-0
+                </a>
+            </li>
+        </ul>
 
-    <div class="tab-content">
-        <div class="tab-pane" id="wanga-q" role="tabpanel">
-            <h5>WANGA – R</h5>
-        </div>
-        <div class="tab-pane" id="wanga-s" role="tabpanel">
-            <h5>WANGA – I</h5>
-        </div>
-        <div class="tab-pane" id="wanga-z" role="tabpanel">
-            <h5>WANGA – N</h5>
-        </div>
-        <div class="tab-pane" id="wanga-c" role="tabpanel">
-            <h5>WANGA – O</h5>
+        <div class="tab-content">
+            <div class="tab-pane" id="wanga-q" role="tabpanel">
+                <h5>WANGA – R</h5>
+            </div>
+            <div class="tab-pane" id="wanga-s" role="tabpanel">
+                <h5>WANGA – I</h5>
+            </div>
+            <div class="tab-pane" id="wanga-z" role="tabpanel">
+                <h5>WANGA – N</h5>
+            </div>
+            <div class="tab-pane" id="wanga-c" role="tabpanel">
+                <h5>WANGA – O</h5>
+            </div>
         </div>
     </div>
-</div>
-<div class="green-content row">
-    <div class="links-wrapper mx-auto">
-        <h4>Алгоритми</h4>
-        <a href="#wanga">Wanga</a>
-        <a href="#zet">Zet</a>
+    <div class="green-content row">
+        <div class="links-wrapper mx-auto">
+            <h4>Алгоритми</h4>
+            <a href="#wanga">Wanga</a>
+            <a href="#zet">Zet</a>
+        </div>
     </div>
-</div>
-<div class="row">
-    <p class="float-sm-left">Copyright © 2016</p>
-    <p class="float-sm-right">Created by Mary Gerina</p>
+    <div class="row">
+        <p class="float-sm-left">Copyright © 2016</p>
+        <p class="float-sm-right">Created by Mary Gerina</p>
+    </div>
+
+    <script src="assets/js/slider.js"></script>
 </div>
