--- a/app/components/main.html
+++ b/app/components/main.html
@@ -47,28 +47,28 @@
             <li class="nav-item active">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
                    aria-controls="wanga-q">
-                    <img src="assets/img/bg.jpg"/>
+                    <img src="assets/img/icons/icon39_02.gif"/>
                     Wanga-R
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-s" role="tab"
                    aria-controls="wanga-s">
-                    <img src="assets/img/bg.jpg"/>
+                    <img src="assets/img/icons/icon39_03.gif"/>
                     Wanga-I
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-c" role="tab"
                    aria-controls="wanga-c">
-                    <img src="assets/img/bg.jpg"/>
+                    <img src="assets/img/icons/icon39_04.gif"/>
                     Wanga-N
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-z" role="tab"
                    aria-controls="wanga-z">
-                    <img src="assets/img/bg.jpg"/>
+                    <img src="assets/img/icons/icon39_05.gif"/>
                     Wanga-0
                 </a>
             </li>
