--- a/app/components/main.html
+++ b/app/components/main.html
@@ -48,28 +48,28 @@
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
                    aria-controls="wanga-q">
                     <img src="assets/img/icons/icon39_02.gif"/>
-                    Wanga-R
+                    <span>Wanga-R</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-s" role="tab"
                    aria-controls="wanga-s">
                     <img src="assets/img/icons/icon39_03.gif"/>
-                    Wanga-I
+                    <span>Wanga-R</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-c" role="tab"
                    aria-controls="wanga-c">
                     <img src="assets/img/icons/icon39_04.gif"/>
-                    Wanga-N
+                    <span>Wanga-R</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-z" role="tab"
                    aria-controls="wanga-z">
                     <img src="assets/img/icons/icon39_05.gif"/>
-                    Wanga-0
+                    <span>Wanga-R</span>
                 </a>
             </li>
         </ul>
@@ -97,8 +97,8 @@
         </div>
     </div>
     <div class="row">
-        <p class="float-sm-left">Copyright © 2016</p>
-        <p class="float-sm-right">Created by Mary Gerina</p>
+        <span class="float-sm-left">Copyright © 2016</span>
+        <span class="float-sm-right">Created by Mary Gerina</span>
     </div>
 
     <script src="assets/js/slider.js"></script>
