--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -106,6 +106,10 @@ article {
     display: block;
 }
 
+.nav-link span {
+    color: #b2bb47;
+}
+
 .custom-carousel {
     margin-top: 10px;
     margin-bottom: 10px;
