--- a/app/components/main.html
+++ b/app/components/main.html
@@ -47,45 +47,46 @@
             <li class="nav-item active">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
                    aria-controls="wanga-q">
-                    <img src="assets/img/icons/icon39_02.gif"/>
-                    <span>Wanga-R</span>
+                    <img class="mx-auto" src="assets/img/icons/icon39_02.gif"/>
+                    <span>Актуальність</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-s" role="tab"
                    aria-controls="wanga-s">
-                    <img src="assets/img/icons/icon39_03.gif"/>
-                    <span>Wanga-R</span>
+                    <img class="mx-auto" src="assets/img/icons/icon39_03.gif"/>
+                    <span>Легкість</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-c" role="tab"
                    aria-controls="wanga-c">
-                    <img src="assets/img/icons/icon39_04.gif"/>
-                    <span>Wanga-R</span>
+                    <img class="mx-auto" src="assets/img/icons/icon39_04.gif"/>
+                    <span>Унікальність</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-z" role="tab"
                    aria-controls="wanga-z">
-                    <img src="assets/img/icons/icon39_05.gif"/>
-                    <span>Wanga-R</span>
+                    <img class="mx-auto" src="assets/img/icons/icon39_05.gif"/>
+                    <span>Аналіз</span>
                 </a>
             </li>
         </ul>
 
         <div class="tab-content">
             <div class="tab-pane" id="wanga-q" role="tabpanel">
-                <h5>WANGA – R</h5>
+                <span>Ця проблема актуальна багато років. Дані алгоритми - можливість її вирішити.</span>
             </div>
             <div class="tab-pane" id="wanga-s" role="tabpanel">
-                <h5>WANGA – I</h5>
+                <span>Дані алгоритми зрозумілі і прості для використання.</span>
             </div>
             <div class="tab-pane" id="wanga-z" role="tabpanel">
-                <h5>WANGA – N</h5>
+                <span>Тільки на цьому сайті ви знайдете добірку алгоритмів для вирішення проблеми востановления
+                    даних.</span>
             </div>
             <div class="tab-pane" id="wanga-c" role="tabpanel">
-                <h5>WANGA – O</h5>
+                <span>Ви зможете оцінити який алгоритм підходить саме вам.</span>
             </div>
         </div>
     </div>
