--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -74,6 +74,11 @@ article {
     background: url("../img/bg.jpg") repeat;
 }
 
+.main-content {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .content {
     background: #FFFFFF;
 }
