--- a/app/components/main.html
+++ b/app/components/main.html
@@ -74,7 +74,7 @@
             </li>
         </ul>
 
-        <div class="tab-content">
+        <div class="main-content tab-content">
             <div class="tab-pane" id="wanga-q" role="tabpanel">
                 <span>Ця проблема актуальна багато років. Дані алгоритми - можливість її вирішити.</span>
             </div>
