--- a/app/components/analyze.html
+++ b/app/components/analyze.html
@@ -1,27 +1,30 @@
 <div class="row full-content">
     <div class="content col-md-10 offset-md-1">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item active">
-                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-r" role="tab"
-                   aria-controls="wanga-r">Wanga-R</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-i" role="tab"
-                   aria-controls="wanga-i">Wanga-I</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-n" role="tab"
-                   aria-controls="wanga-n">Wanga-N</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-0" role="tab"
-                   aria-controls="wanga-0">Wanga-0</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" target="_self" data-toggle="tab" href="#zet" role="tab"
-                   aria-controls="zet">Zet</a>
-            </li>
-        </ul>
+        <article>
+            <h4>Аналіз алгоритмів при різній кількості пропусків</h4>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item active">
+                    <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-r" role="tab"
+                       aria-controls="wanga-r">Wanga-R</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-i" role="tab"
+                       aria-controls="wanga-i">Wanga-I</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-n" role="tab"
+                       aria-controls="wanga-n">Wanga-N</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-0" role="tab"
+                       aria-controls="wanga-0">Wanga-0</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" data-toggle="tab" href="#zet" role="tab"
+                       aria-controls="zet">Zet</a>
+                </li>
+            </ul>
+        </article>
 
         <canvas id="myChart"></canvas>
     </div>
