--- a/app/components/main.html
+++ b/app/components/main.html
@@ -42,7 +42,7 @@
         </div>
         <script src="assets/js/books.js"></script>
     </div>
-    <div class="row">
+    <div class="white-content row">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item active">
                 <a class="nav-link" target="_self" data-toggle="tab" href="#wanga-q" role="tab"
@@ -97,7 +97,7 @@
             <a href="#zet">Zet</a>
         </div>
     </div>
-    <div class="row">
+    <div class="white-content row">
         <span class="float-sm-left">Copyright © 2016</span>
         <span class="float-sm-right">Created by Mary Gerina</span>
     </div>
