--- a/app/components/zet.html
+++ b/app/components/zet.html
@@ -1,4 +1,4 @@
-<div class="row full-content">
+<div class="row">
     <div class="content col-md-10 offset-md-1">
         <article>
             <h4>Базовий алгоритм сімейства ZET</h4>
