--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -52,6 +52,7 @@ body {
 h2 {
     padding-left: 20px;
     padding-top: 260px;
+    font-size: 40px;
     font-style: italic;
     font-weight: bold;
     color: green;
