--- a/app/components/wanga.html
+++ b/app/components/wanga.html
@@ -3,7 +3,7 @@
         <article>
             <h4>Алгоритми сімейства WANGA</h4>
             <p>
-                Алгоритми сімейства ВАНГА [5] призначені для заповнення прогалин в таблицях з різнотипними змінними [6].
+                Алгоритми сімейства ВАНГА призначені для заповнення прогалин в таблицях з різнотипними змінними.
                 Почнемо з опису алгоритмів для таблиці, всі n ознак в якій виміряні в одній і тій же шкалі відносин.
             </p>
 
@@ -197,7 +197,7 @@
                         Якщо всі ознаки в таблиці A виміряні в шкалі порядку, то прогалини в ній заповнюються алгоритмом
                         ВАНГА -
                         0.
-                        Перетворимо всі стовпці, привівши їх значення до шкали нормованих рангів [4]. Інваріантним до
+                        Перетворимо всі стовпці, привівши їх значення до шкали нормованих рангів. Інваріантним до
                         перетворень
                         шкали порядку є судження такого роду: якщо a lk > a ik, то і a lj > a ij. Звідси виходить один з
                         трьох
